--- a/server/views/layouts/main.hbs
+++ b/server/views/layouts/main.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full" data-theme="light">
+<html lang="en" class="h-full dark" data-theme="dark">
 <head>
   <meta charset="utf-8">
   <title>{{#if title}}{{title}} · {{/if}}Habit & Nutrition Tracker</title>
